--- a/android/project.properties
+++ b/android/project.properties
@@ -11,8 +11,10 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-8
+target=android-19
 
 android.library=true
 
-android.library.reference.1=../../../cocos2dx/platform/android/java
+android.library.reference.1=../submodules/android-store/submodules/android-store-google-play
+android.library.reference.2=../submodules/android-store/SoomlaAndroidStore
+android.library.reference.3=../../../cocos2dx/platform/android/java
