adjustments for compilation

--- a/soomla-native/projects/cocos2dx-android-store/project.properties
+++ b/soomla-native/projects/cocos2dx-android-store/project.properties
@@ -15,6 +15,7 @@ target=android-19
 
 android.library=true
 
-android.library.reference.1=../submodules/android-store/submodules/android-store-google-play
-android.library.reference.2=../submodules/android-store/SoomlaAndroidStore
-android.library.reference.3=../../../cocos2dx/platform/android/java
+android.library.reference.1=../../../submodules/android-store/submodules/android-store-google-play
+android.library.reference.2=../../../submodules/android-store/submodules/android-store-amazon
+android.library.reference.3=../../../submodules/android-store/SoomlaAndroidStore
+android.library.reference.4=../../../../../cocos2dx/platform/android/java
