--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 local.properties
 *.iml
 TAGS
+soomla-native/projects/cocos2dx-android-store/bin
+soomla-native/projects/cocos2dx-android-store/gen
+
